# boxcar

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
R/: plots.R  posteriors.R  summarise_results.R  test_assumptions.R  tests.R
docs/: Makefile  conf.py  example.ipynb  make.bat
outputs/: hypothesis_tests_all_vs_baseline.csv  results.csv
src/boxcar/: __init__.py  boxcar.py  get_plots.py  get_results.py  test_hypothesis.py
src/boxcar/classes/: generate.py  handlers.py  rider.py  simulation.py  taxi.py
src/boxcar/modules/: handlers.py  utils.py
tests/: test_boxcar.py
