[tool.poetry]
name = "boxcar"
version = "0.1.0"
description = "Model & Simulate BoxCar app"
authors = ["Louis Bennett"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.4.2"
scipy = "^1.17.1"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
